--- a/ansible/main/playbooks/dnsserver/nuke.yaml
+++ b/ansible/main/playbooks/dnsserver/nuke.yaml
@@ -39,3 +39,9 @@
       ansible.builtin.file:
         path: /etc/apt/sources.list.d/docker.list
         state: absent
+
+  post_tasks:
+    - name: Rebooting...
+      ansible.builtin.reboot:
+        msg: Rebooting hosts
+        reboot_timeout: 3600
