refactor(storage): remove hdd storage
Signed-off-by: unusualpseudo <hatimahadri@proton.me>

--- a/ansible/main/inventory/group_vars/dnsserver/main.yaml
+++ b/ansible/main/inventory/group_vars/dnsserver/main.yaml
@@ -12,6 +12,8 @@ apt_install_packages:
   - htop
   - unzip
   - arptables
+  - arping
+  - strace
   - software-properties-common
   - unzip
   - dnsutils
