--- a/ansible/main/inventory/host_vars/horizon.sops.yaml
+++ b/ansible/main/inventory/host_vars/horizon.sops.yaml
@@ -1,7 +1,5 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:gARAg38E/rY=,iv:OC/d0N0zw1iBx+O9KOTjRzuyH5RccOw+71ThS7kLPro=,tag:USB7zPuRf3tru7xviyPyhA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:XD1p1gK+Hw==,iv:rhnEHDVAPtxBTIlGnN6YFGYixUR7YwAmow/qX5oL80A=,tag:JC5g6r5Ehwy5ACFDtXMDNw==,type:str]
-pihole_password: ENC[AES256_GCM,data:tLNwddz6XT6nuA==,iv:fF2iBiNfM/QHDUkWipJGONFKrhi8I030tbqNZvU9hIk=,tag:BkhSY5ccpVTbtMy12PaL9w==,type:str]
+ansible_user: ENC[AES256_GCM,data:onXHJORkHIw=,iv:4gPrT1pqkf2Xmqp//IhlN8e3UbUCEN8RUx/JrYf6OZ4=,tag:Fw+fHvjFwLo8P8DvmlZ/Nw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -11,14 +9,14 @@ sops:
         - recipient: age1zqydytfsqv3g789ud2jjhrflk445wcadnz0fccrf82zhwfwcgd4q404rtr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDbjJlY0tDazJXNGgrOW1u
-            WnlSSFJZcjlQdnNJS3NZYkVhL3V4Wi9GOXpJCjVCb1ZCSzl0MjA5T1FDK1ZFb2ZU
-            K1Y4aklWbzdNMVNlbmZrd0NWWW8vTG8KLS0tIGJyWlpDQzE2aHNZSHNOWC9yU0tq
-            UzhabTFXbjF5bDUvSjhtcElyY29sZUEKVucCXyA79JMAc0y4NkvxnJN+8l9BMiMr
-            3LAbfkjG5VlByjnwW1iqkYWrlovq9xGWoa5z2aeIBk3W2pczs0G+xQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBIN2NMZmI5ZE5aVUxxKzZq
+            di96ZEZ4MzA0T2szd2RPM3JBV3k4TGt2RHlVCnJXNmtMK3pCaGxwdmF0M0w2aTlW
+            L25pc0FyTWZHREM5b093YjU1TE5QckUKLS0tIEdML0FNcmx1TUVsMGRTYWlHeGQ5
+            YWRYVkkxMGdWSXpzOE1iZ3p4M2Q0RG8Kq6aIaexdrZIIA+TvHN9iEZ4VUX/XWIy9
+            Ns6JaVHe5N2esc2ZqwdNcJy9WVjxM7G0DfqW0lnyo1Th5wT8SFRUeg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-14T02:45:45Z"
-    mac: ENC[AES256_GCM,data:VtSJrTsVr0H2fsf0FKU4wML9WzaeZBMmlaesT8TZkIon3mjHO/XiNFi9uWxLRWVWgjAcQB3jOF8bN93IZjgZxdLExcI1RVQ2kPXvpNbQVrHXwrbHd4BiHEz5j2wYfmMrRLPcVp7sovy0QR+XY0k2NqKSUHKlGRjWyIx4x9G9mSw=,iv:w9uH2i74dXshvWweUa5jIOV1TIT8VuzZeksxKFMZ84I=,tag:FMBp9jxdav7vl7XrwuDvpQ==,type:str]
+    lastmodified: "2024-08-20T22:08:10Z"
+    mac: ENC[AES256_GCM,data:UcxLaX350h5WKizdrhQm1jCHGgn05oVwpVJlQ+5VchDHB/jLyOUYUbCHgfZ8ZliRRyax8HDW9I8iIaNXXhyzZVBUUQMx5lV4HXO2/TShZh55RKz2OKrPzvxbC9p0fO4keLYsG3851sAotuEthVhDGH6jlsYKsbExi3AK9EWvQ0g=,iv:SQM3I17bWAjtI1alF/TuXiZn+5lY5O8ATBdn0JfyzIw=,tag:G4acpcWOGeuhOYP8+J692g==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.9.0
