--- a/ansible/main/inventory/host_vars/titan.sops.yaml
+++ b/ansible/main/inventory/host_vars/titan.sops.yaml
@@ -1,6 +1,5 @@
 kind: Secret
-ansible_user: ENC[AES256_GCM,data:UcmrWLvQg3I=,iv:cphwWZVW3tiqnS0BcIsPwwEBQ2+BR/U6WJAUJyJMu3k=,tag:GqrXieYMEjRaEhEwbSi9yw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:HNZiKOnNBQ==,iv:FMYVPRtD87yc980SNTYe3HRVTxJEESBSSpEVd8lY794=,tag:TaEfvw+dvoUsezNQXtWjow==,type:str]
+ansible_user: ENC[AES256_GCM,data:NItDUL3cFco=,iv:lkiKXZfCaq7vyATm/mFOPrfchtTm5ye9aNIzIeWlvR4=,tag:SUWvNyZ9TA4pt7wscUX2aA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +9,14 @@ sops:
         - recipient: age1zqydytfsqv3g789ud2jjhrflk445wcadnz0fccrf82zhwfwcgd4q404rtr
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTUTI1ZXhjNGkwbVFBRi9w
-            Z3FzMnBjM0VOZnhOQlJuU1Y0YkJleUdqNnkwCldFVENWZXJQZWMvQ0VCV3E1bXpF
-            dWJhU1REcml3dUNzTW9Ld1NqRllOdGsKLS0tIHZEOTE3b2srNmJ1SFRkSnJsdWJz
-            bDFaRnJxeGlzVG1tcHhhWXpvbDYxSXMKTjh1+WZaNGalJIQM0pQYDjHIXVkph7XS
-            FVl7vgTGDhPiJorD0g/RXoyFBy5qMAGSDOteWS4oY45oA7wWWqDFvQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMYVlFWlhJODBRbVZmWW5t
+            NzhxcnZpeEM5VGNpMFVNQlNYS3JXQ0RqTmxFClNYU0dXS3h0YTVzRHZ0RitCTVFY
+            TXdDTEU1a3BvSlpFQSs2T1hYRGZHRncKLS0tIGE5eEM2bzArayt3d3czUjROM2w1
+            RVRHQmVldE5MNDV0NGlOR2tjbTRIMGcK+48UAjGMzxeqF2fl2FVaUWsxLvWW43g0
+            MmmlWiQ76vmJIIsZVGiQf7YH2I2nV02qDlH+o2QmLXZEQNPAJVSI6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-08-03T14:26:12Z"
-    mac: ENC[AES256_GCM,data:lP46JnZz0bl0cnUosJEUFc9Dg5FgfMHcKc2MPytX1VQvEbFtBDcBGvHdvuHqztqyRN29Vcj42bdIivam3mupUMGaRg5djpdIJNXpwOrE2fX1ofEAfgLY58EmuNZXevafx20QXyIGaoT1KxnvX4BPI4a2bavDyph7DucOBuIM4aA=,iv:Yr5VGEh5lDajWxVk0j88ZQdhBIENdI4TjsDY8nzm3DQ=,tag:YEqc+v8JW6r6d9IuDkKGvg==,type:str]
+    lastmodified: "2024-08-20T22:08:06Z"
+    mac: ENC[AES256_GCM,data:/W7MXvJZDgly2/wZxb0beAYZZfho9OJ9vKW1BDqXySmFPN2k9dMgNXPFjHo7q6EZAO21OPnRwJvmjQiAzIHUtv62Abd6tYWD7V3kmzqxZK/YL3wZ6TCX25pVF2daLk90C9C7YcXUbANjAl+aTLe6ijsY6nw3nhILMgopzG7CHHE=,iv:nrLvR8E8TftQkJGlCBu+FPYeaSjGeu5JHp2bS56Zx5M=,tag:Z7ZBpNzrrdIitmMScrp6rA==,type:str]
     pgp: []
     unencrypted_regex: ^(kind)$
     version: 3.9.0
