--- a/ansible/main/inventory/hosts.yaml
+++ b/ansible/main/inventory/hosts.yaml
@@ -1,4 +1,6 @@
 all:
+  vars:
+    ansible_user: "{{ lookup('env', 'ANSIBLE_USER') }}"
   children:
     kubernetes:
       children:
@@ -17,6 +19,4 @@ all:
     storage:
       hosts:
         apex:
-          disk_device_id: "usb-Micron_CT1000X9PROSSD9_2409E8C145DD-0:0"
         rift:
-          disk_device_id: "usb-WD_Elements_25A1_575834314442384E39444131-0:0"
